--- a/TaskTracker/TaskTracker/Views/Controls/CarouselItem.xaml
+++ b/TaskTracker/TaskTracker/Views/Controls/CarouselItem.xaml
@@ -4,21 +4,15 @@
              xmlns:xForms="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms"
              xmlns:resources="clr-namespace:TaskTracker.Resources"
              xmlns:popupLayout="clr-namespace:Syncfusion.XForms.PopupLayout;assembly=Syncfusion.SfPopupLayout.XForms"
-             xmlns:converters="clr-namespace:TaskTracker.Converters"
              BindingContextChanged="CarouselItem_OnBindingContextChanged"
              x:Class="TaskTracker.Views.Controls.CarouselItem">
 
-    <ContentView.Resources>
-        <converters:BoolNegateConverter x:Key="NegateConverter"/>
-    </ContentView.Resources>
-
     <ContentView.Content>
-        <popupLayout:SfPopupLayout x:Name="AddNewTaskPopup">
+        <popupLayout:SfPopupLayout x:Name="CarouselItemPopup">
 
             <popupLayout:SfPopupLayout.Content>
 
                 <Grid>
-
                     <Grid.RowDefinitions>
                         <RowDefinition Height="55" />
                         <RowDefinition Height="*" />
@@ -30,6 +24,11 @@
                             <Label TextColor="Black" HorizontalTextAlignment="Center" Text="{Binding Name}" 
                                    FontAttributes="Bold" FontSize="Medium" VerticalOptions="Center" HorizontalOptions="Center"/>
                         </StackLayout>
+
+                        <Grid.GestureRecognizers>
+                            <TapGestureRecognizer Command="{Binding RenameColumnButtonCommand}"/>
+                        </Grid.GestureRecognizers>
+
                     </Grid>
 
                     <xForms:SfListView Grid.Row="1" x:Name="lvTasks" ItemsSource="{Binding TaskCollection}" TapCommand="{Binding TaskSelectedCommand}" 
@@ -40,16 +39,21 @@
                         <xForms:SfListView.ItemTemplate>
                             <DataTemplate>
                                 <FlexLayout Padding="5,5,5,5" AlignItems="Start" JustifyContent="SpaceBetween" Direction="Row" BackgroundColor="#FAFAFA">
+
+                                    <FlexLayout.Triggers>
+                                        <DataTrigger TargetType="FlexLayout" Binding="{Binding IsDone}" Value="True">
+                                            <Setter Property="Opacity" Value="0.5"/>
+                                        </DataTrigger>
+                                    </FlexLayout.Triggers>
+
                                     <Frame HeightRequest="60" WidthRequest="60" CornerRadius="30" Padding="1" BackgroundColor="LightBlue">
                                         <Image Scale="0.7" Source="{Binding AssignedUser.Image}"/>
                                     </Frame>
 
                                     <StackLayout>
-
                                         <Label TextColor="Black" Text="{Binding Name}" HorizontalTextAlignment="Start" HorizontalOptions="StartAndExpand"/>
                                         <Button Image="arrows.xml" VerticalOptions="End" HorizontalOptions="End" HeightRequest="40" WidthRequest="40" 
                                                 CornerRadius="20" Command="{Binding Path=MoveTaskButtonCommand}"/>
-
                                     </StackLayout>
                                 </FlexLayout>
                             </DataTemplate>
@@ -69,7 +73,7 @@
 
                         <xForms:SfListView.FooterTemplate>
                             <DataTemplate>
-                                <Button HeightRequest="45" Command="{Binding AddTaskCommand}" Text="{resources:Translate AddNewTask}"/>
+                                <Button HeightRequest="45" Command="{Binding AddTaskButtonCommand}" Text="{resources:Translate AddNewTask}"/>
                             </DataTemplate>
                         </xForms:SfListView.FooterTemplate>
                     </xForms:SfListView>
@@ -79,15 +83,8 @@
             </popupLayout:SfPopupLayout.Content>
 
             <popupLayout:SfPopupLayout.PopupView>
-                <popupLayout:PopupView AppearanceMode="TwoButton" AcceptButtonText="{resources:Translate Accept}" DeclineButtonText="{resources:Translate Cancel}" AcceptCommand="{Binding ConfirmPopupCommand}" HeaderTitle="{resources:Translate AddNewTask}" HeightRequest="150">
-                    <popupLayout:PopupView.ContentTemplate>
-                        <DataTemplate>
-                            <Grid>
-                                <Entry Text="{Binding NewTaskName, Mode=TwoWay}" Placeholder="{resources:Translate TaskName}" Keyboard="Text" TextColor="Black" HeightRequest="50"/>
-                            </Grid>
-                        </DataTemplate>
-                    </popupLayout:PopupView.ContentTemplate>
-                </popupLayout:PopupView>
+                <popupLayout:PopupView AppearanceMode="TwoButton" AcceptButtonText="{resources:Translate Accept}" DeclineButtonText="{resources:Translate Cancel}" 
+                                       HeightRequest="150"/>
             </popupLayout:SfPopupLayout.PopupView>
 
         </popupLayout:SfPopupLayout>
