--- a/TaskTracker/TaskTracker/Views/Controls/BoardListItem.xaml
+++ b/TaskTracker/TaskTracker/Views/Controls/BoardListItem.xaml
@@ -4,15 +4,15 @@
              xmlns:xForms="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms"
              x:Class="TaskTracker.Views.Controls.BoardListItem">
     <ContentView.Content>
-        <Frame BackgroundColor="#FAFAFA" HasShadow="True" HeightRequest="75" Padding="1" Margin="20,0">
+        <Frame BackgroundColor="#FAFAFA" HasShadow="False" HeightRequest="80" Padding="1">
             <StackLayout>
                 <Label HorizontalTextAlignment="Center" Text="{Binding Name}" TextColor="Black"/>
 
-                <xForms:SfListView Orientation="Horizontal" ItemsSource="{Binding AssignedUsers}" ItemSpacing="0" IsEnabled="false" Margin="10,0,0,10">
+                <xForms:SfListView Orientation="Horizontal" ItemsSource="{Binding AssignedUsers}" ItemSpacing="0" IsEnabled="false" Margin="10,5,0,5">
                     <xForms:SfListView.ItemTemplate>
                         <DataTemplate >
                             <FlexLayout AlignItems="Start" JustifyContent="SpaceBetween" Direction="Column">
-                                <Frame HeightRequest="26" WidthRequest="26" CornerRadius="13" Padding="1" BackgroundColor="LightBlue">
+                                <Frame HeightRequest="30" WidthRequest="30" CornerRadius="15" Padding="1" BackgroundColor="LightBlue">
                                     <Image Scale="0.7" Source="{Binding Image}"/>
                                 </Frame>
                             </FlexLayout>
