Preparation for moving tasks to other columns.

--- a/TaskTracker/TaskTracker/App.xaml
+++ b/TaskTracker/TaskTracker/App.xaml
@@ -35,7 +35,7 @@
 
         <DataTemplate x:Key="RenameColumnPopup">
             <Grid>
-                <Entry Text="{Binding Path=Name}" Placeholder="{resources:Translate ColumnName}" 
+                <Entry Text="{Binding Path=ColumnName}" Placeholder="{resources:Translate ColumnName}" 
                        Keyboard="Text" TextColor="Black" HeightRequest="50"/>
             </Grid>
         </DataTemplate>
