--- a/TaskTracker/TaskTracker/Views/Controls/CarouselItem.xaml
+++ b/TaskTracker/TaskTracker/Views/Controls/CarouselItem.xaml
@@ -32,7 +32,6 @@
                     </Grid>
 
                     <xForms:SfListView Grid.Row="1" x:Name="lvTasks" ItemsSource="{Binding TaskCollection}" TapCommand="{Binding TaskSelectedCommand}" 
-                                       ItemDragging="LvTasks_OnItemDragging"
                                        ItemSize="80" DragStartMode="OnHold" ItemSpacing="0,0,0,5" 
                                        IsStickyFooter="True">
 
@@ -53,7 +52,7 @@
                                     <StackLayout>
                                         <Label TextColor="Black" Text="{Binding Name}" HorizontalTextAlignment="Start" HorizontalOptions="StartAndExpand"/>
                                         <Button BackgroundColor="Transparent" Image="arrows.xml" VerticalOptions="End" HorizontalOptions="End" HeightRequest="40" WidthRequest="40" 
-                                                CornerRadius="20" CommandParameter="{Binding .}" Command="{Binding Path=BindingContext.MoveTaskButtonCommands"/>
+                                                CornerRadius="20" CommandParameter="{Binding .}" Command="{Binding Path=BindingContext.MoveTaskButtonCommands}"/>
                                     </StackLayout>
                                 </FlexLayout>
                             </DataTemplate>
