--- a/TaskTracker/TaskTracker/Views/MainPage.xaml
+++ b/TaskTracker/TaskTracker/Views/MainPage.xaml
@@ -2,18 +2,19 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:xForms="clr-namespace:Syncfusion.SfCarousel.XForms;assembly=Syncfusion.SfCarousel.XForms"
-             xmlns:controls="clr-namespace:TaskTracker.Views.Controls"
              xmlns:resources="clr-namespace:TaskTracker.Resources"
              xmlns:popupLayout="clr-namespace:Syncfusion.XForms.PopupLayout;assembly=Syncfusion.SfPopupLayout.XForms"
+             xmlns:xForms1="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms"
              x:Class="TaskTracker.Views.MainPage"
              Title="{Binding SelectedBoard.Name}"
+             x:Name="mainPage"
              BackgroundImage="background.jpg">
 
     <ContentPage.ToolbarItems>
         <ToolbarItem Order="Primary" Icon="reload.xml" Command="{Binding RefreshCommand}"/>
         <ToolbarItem Order="Secondary" Text="{resources:Translate Refresh}" Command="{Binding RefreshCommand}"/>
         <ToolbarItem Order="Secondary" Text="{resources:Translate AddColumn}" Command="{Binding AddColumnButtonCommand}"/>
-    </ContentPage.ToolbarItems> 
+    </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
         <Grid>
@@ -21,10 +22,79 @@
 
                 <popupLayout:SfPopupLayout.Content>
 
-                    <xForms:SfCarousel ItemsSource="{Binding SelectedBoard.ColumnsCollection}">
+                    <xForms:SfCarousel x:Name="carColumns" SelectedIndex="{Binding SelectedColumnPosition}" ItemsSource="{Binding SelectedBoard.ColumnsCollection}">
                         <xForms:SfCarousel.ItemTemplate>
                             <DataTemplate>
-                                <controls:CarouselItem/>
+
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="55" />
+                                        <RowDefinition Height="*" />
+                                    </Grid.RowDefinitions>
+
+                                    <Grid x:Name="Header" BackgroundColor="Transparent">
+                                        <StackLayout Orientation="Horizontal" >
+                                            <Image x:Name="DeleteImage" IsVisible="False" Source="delete.xml"/>
+                                            <Label TextColor="Black" HorizontalTextAlignment="Center" Text="{Binding Name}" 
+                                   FontAttributes="Bold" FontSize="Medium" VerticalOptions="Center" HorizontalOptions="Center"/>
+                                        </StackLayout>
+
+                                        <Grid.GestureRecognizers>
+                                            <TapGestureRecognizer Command="{Binding BindingContext.RenameColumnButtonCommand, Source={x:Reference Name=mainPage}}" CommandParameter="{Binding .}"/>
+                                        </Grid.GestureRecognizers>
+
+                                    </Grid>
+
+                                    <xForms1:SfListView Grid.Row="1" x:Name="lvTasks" ItemsSource="{Binding TaskCollection}" TapCommand="{Binding BindingContext.TaskSelectedCommand, Source={x:Reference Name=mainPage}}" 
+                                       ItemDragging="LvTasks_OnItemDragging"
+                                       ItemSize="80" DragStartMode="OnHold" ItemSpacing="0,0,0,5" 
+                                       IsStickyFooter="True">
+
+                                        <xForms1:SfListView.ItemTemplate>
+                                            <DataTemplate>
+                                                <FlexLayout Padding="5,5,5,5" AlignItems="Start" JustifyContent="SpaceBetween" Direction="Row" BackgroundColor="#FAFAFA">
+
+                                                    <FlexLayout.Triggers>
+                                                        <DataTrigger TargetType="FlexLayout" Binding="{Binding IsDone}" Value="True">
+                                                            <Setter Property="Opacity" Value="0.5"/>
+                                                        </DataTrigger>
+                                                    </FlexLayout.Triggers>
+
+                                                    <Frame HeightRequest="60" WidthRequest="60" CornerRadius="30" Padding="1" BackgroundColor="LightBlue">
+                                                        <Image Scale="0.7" Source="{Binding AssignedUser.Image}"/>
+                                                    </Frame>
+
+                                                    <StackLayout>
+                                                        <Label TextColor="Black" Text="{Binding Name}" HorizontalTextAlignment="Start" HorizontalOptions="StartAndExpand"/>
+                                                        <Button BackgroundColor="Transparent" Image="arrows.xml" VerticalOptions="End" HorizontalOptions="End" 
+                                                                HeightRequest="40" WidthRequest="40" CornerRadius="20" 
+                                                                CommandParameter="{Binding .}" Command="{Binding Path=BindingContext.MoveTaskButtonCommand, Source={x:Reference Name=mainPage}}"/>
+                                                    </StackLayout>
+                                                </FlexLayout>
+                                            </DataTemplate>
+                                        </xForms1:SfListView.ItemTemplate>
+
+                                        <xForms1:SfListView.DragItemTemplate>
+                                            <DataTemplate>
+                                                <FlexLayout Padding="5,5,5,5" AlignItems="Start" JustifyContent="SpaceBetween" Direction="Column" BackgroundColor="#4BFAFAFA">
+                                                    <Label TextColor="Black" Text="{Binding Name}"/>
+                                                    <BoxView HeightRequest="1" HorizontalOptions="CenterAndExpand" Color="#616161"/>
+                                                    <Frame HeightRequest="30" WidthRequest="30" CornerRadius="15" Padding="1" BackgroundColor="LightBlue" Opacity=".5">
+                                                        <Image Scale="0.7" Source="{Binding AssignedUser.Image}"/>
+                                                    </Frame>
+                                                </FlexLayout>
+                                            </DataTemplate>
+                                        </xForms1:SfListView.DragItemTemplate>
+
+                                        <xForms1:SfListView.FooterTemplate>
+                                            <DataTemplate>
+                                                <Button HeightRequest="45" Command="{Binding BindingContext.AddTaskButtonCommand, Source={x:Reference Name=mainPage}}" Text="{resources:Translate AddNewTask}"/>
+                                            </DataTemplate>
+                                        </xForms1:SfListView.FooterTemplate>
+                                    </xForms1:SfListView>
+
+                                </Grid>
+
                             </DataTemplate>
                         </xForms:SfCarousel.ItemTemplate>
                     </xForms:SfCarousel>
