--- a/TaskTracker/TaskTracker/Views/MainPage.xaml
+++ b/TaskTracker/TaskTracker/Views/MainPage.xaml
@@ -61,9 +61,9 @@
                                                         </DataTrigger>
                                                     </FlexLayout.Triggers>
 
-                                                    <Frame HeightRequest="60" WidthRequest="60" CornerRadius="30" Padding="1" BackgroundColor="LightBlue">
-                                                        <Image Scale="0.7" Source="{Binding AssignedUser.Image}"/>
-                                                    </Frame>
+                                                    <border:SfBorder BorderWidth="0" HeightRequest="60" WidthRequest="60" CornerRadius="30" BackgroundColor="LightBlue">
+                                                        <Image Scale="1.2" Source="{Binding AssignedUser.Image}"/>
+                                                    </border:SfBorder>
 
                                                     <StackLayout>
                                                         <Label TextColor="Black" Text="{Binding Name}" HorizontalTextAlignment="Start" HorizontalOptions="StartAndExpand"/>
@@ -77,12 +77,17 @@
 
                                         <xForms1:SfListView.DragItemTemplate>
                                             <DataTemplate>
-                                                <FlexLayout Padding="5,5,5,5" AlignItems="Start" JustifyContent="SpaceBetween" Direction="Column" BackgroundColor="#4BFAFAFA">
-                                                    <Label TextColor="Black" Text="{Binding Name}"/>
-                                                    <BoxView HeightRequest="1" HorizontalOptions="CenterAndExpand" Color="#616161"/>
-                                                    <border:SfBorder HeightRequest="30" WidthRequest="30" CornerRadius="15" BackgroundColor="LightBlue" BorderWidth="0" Opacity=".5">
-                                                        <Image Source="{Binding AssignedUser.Image}"/>
+                                                <FlexLayout Padding="5,5,5,5" Opacity="0.8" AlignItems="Start" JustifyContent="SpaceBetween" Direction="Row" BackgroundColor="#FAFAFA">
+                                                    <border:SfBorder HeightRequest="60" WidthRequest="60" CornerRadius="30" BorderWidth="0" BackgroundColor="LightBlue">
+                                                        <Image Scale="1.2" Source="{Binding AssignedUser.Image}"/>
                                                     </border:SfBorder>
+
+                                                    <StackLayout>
+                                                        <Label TextColor="Black" Text="{Binding Name}" HorizontalTextAlignment="Start" HorizontalOptions="StartAndExpand"/>
+                                                        <Button BackgroundColor="Transparent" Image="arrows.xml" VerticalOptions="End" HorizontalOptions="End" 
+                                                                HeightRequest="40" WidthRequest="40" CornerRadius="20" 
+                                                                CommandParameter="{Binding .}" Command="{Binding Path=BindingContext.MoveTaskButtonCommand, Source={x:Reference Name=mainPage}}"/>
+                                                    </StackLayout>
                                                 </FlexLayout>
                                             </DataTemplate>
                                         </xForms1:SfListView.DragItemTemplate>
