LogOut, and popup fixes

--- a/TaskTracker/TaskTracker/Views/BoardPage.xaml
+++ b/TaskTracker/TaskTracker/Views/BoardPage.xaml
@@ -17,6 +17,7 @@
     </ContentPage.Resources>
 
     <ContentPage.ToolbarItems>
+        <ToolbarItem Order="Secondary" Text="{resources:Translate AddImage}" Command="{Binding AddImageCommand}"/>
         <ToolbarItem Order="Secondary" Text="{resources:Translate LogOut}" Command="{Binding LogOutCommand}"/>
     </ContentPage.ToolbarItems>
 
