--- a/TaskTracker/TaskTracker/App.xaml
+++ b/TaskTracker/TaskTracker/App.xaml
@@ -14,7 +14,7 @@
         </DataTemplate>
 
         <DataTemplate x:Key="DeleteBoardPopup">
-            <Grid>
+            <Grid Padding="10">
                 <Label Text="{resources:Translate Question_DeleteBoard}" TextColor="Black" HeightRequest="50"/>
             </Grid>
         </DataTemplate>
@@ -34,7 +34,7 @@
         </DataTemplate>
 
         <DataTemplate x:Key="RenameColumnPopup">
-            <Grid>
+            <Grid Margin="10">
                 <Entry Text="{Binding Path=ColumnName}" Placeholder="{resources:Translate ColumnName}" 
                        Keyboard="Text" TextColor="Black" HeightRequest="50"/>
             </Grid>
