Possibility to add profile picture (not working yet), bug fixes

--- a/TaskTracker/TaskTracker/Views/MainPage.xaml
+++ b/TaskTracker/TaskTracker/Views/MainPage.xaml
@@ -23,7 +23,7 @@
 
                 <popupLayout:SfPopupLayout.Content>
 
-                    <xForms:SfCarousel x:Name="carColumns" SelectedIndex="{Binding SelectedColumnPosition}" ItemsSource="{Binding SelectedBoard.ColumnsCollection}">
+                    <xForms:SfCarousel x:Name="carColumns" SelectedIndex="{Binding SelectedColumnPosition, Mode=TwoWay, UpdateSourceEventName=PropertyChanged}" ItemsSource="{Binding SelectedBoard.ColumnsCollection}">
                         <xForms:SfCarousel.ItemTemplate>
                             <DataTemplate>
 
